# emlo4-session-04

./: .coverage  .gitignore  Dockerfile  README.md  infer.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: eval.yaml  infer.yaml  train.yaml
configs/callbacks/: default.yaml  early_stopping.yaml  model_checkpoint.yaml  model_summary.yaml  rich_progress_bar.yaml
configs/data/: cat_dog.yaml  dog_breed.yaml
configs/hydra/: default.yaml
configs/logger/: csv.yaml  tensorboard.yaml
configs/model/: catdog.yaml  dogbreed.yaml
configs/paths/: default.yaml
configs/trainer/: cpu.yaml  default.yaml  gpu.yaml
src/: eval.py  infer.py  run_all.sh  train.py
src/datamodules/: __init__.py  catdog_datamodule.py  config.yaml  dogbreed.py
src/models/: catdog_claasifier.py  dogbreed_classifier.py
src/utils/: pylogger.py  rich_utils.py  utils.py
tests/: conftest.py
tests/test_datamodule/: test_dogbreed_datamodule.py
tests/test_model/: test_dogbreed_classifier.py
tests/test_train/: test_train.py
