[tool.poetry]
name = "lightning-template-hydra"
version = "0.1.0"
description = "Add your description here"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
black = "24.8.0"
coverage = ">=7.6.1"
hydra-colorlog = ">=1.2.0"
hydra-core = ">=1.3.2"
lightning = {extras = ["extra"], version = "2.4.0"}
loguru = "0.7.2"
pytest = ">=8.3.3"
rich = "13.8.1"
rootutils = ">=1.0.7"
tensorboard = "2.17.1"
timm = "1.0.9"
torch = {version = "2.4.1+cpu", source = "pytorch"}
torchvision = {version = "0.19.1+cpu", source = "pytorch"}
kaggle = "1.5.13"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.report]
include = ["src/**/*.py"]
show_missing = true
